fix: corrected z-index values

--- a/stylesheets/pages/index.css
+++ b/stylesheets/pages/index.css
@@ -7,6 +7,7 @@ html {
 body {
   margin-top: var(--spacing-xxs);
 }
+
 h1,
 h2,
 h3,
@@ -64,7 +65,7 @@ h6 {
   left: 5vw;
   top: 7.5rem;
   display: none;
-  z-index: 5;
+  z-index: 2;
   box-shadow: 1px 1px 10px 3px rgba(36, 35, 35, 0.1);
 }
 .mobile-search-input {
@@ -155,7 +156,7 @@ h6 {
   border-radius: var(--border-rd-sm);
   cursor: pointer;
   border: 1px solid rgb(194, 188, 188);
-  z-index: 2;
+  z-index: 1;
 }
 .btn-left-scroll {
   top: 50%;
@@ -189,7 +190,6 @@ h6 {
   top: 0;
   right: 0.3rem;
   padding: var(--spacing-xxs);
-  z-index: 1;
   border-radius: var(--border-rd-sm);
   background-color: var(--white-color);
 }
